# IoT_Edge_Gateway

./: Cargo.toml  Cross.toml  README.md  build.rs  protocol.toml  protocolo.toml  system.toml
proto/: iot.proto
src/: config.rs  main.rs
src/channels/: domain.rs
src/context/: domain.rs
src/core/: domain.rs
src/database/: domain.rs  logic.rs  mod.rs  repository.rs
src/database/tables/: alert_air.rs  alert_temp.rs  balance_epoch.rs  hub.rs  measurement.rs  mod.rs  monitor.rs  network.rs
src/firmware/: domain.rs  logic.rs
src/fsm/: domain.rs  logic.rs
src/grpc_service/: domain.rs  logic.rs
src/heartbeat/: domain.rs  logic.rs  mod.rs
src/message/: domain.rs  domain_for_table.rs  logic.rs  mod.rs  msg_logic.rs  msg_type.rs
src/metrics/: domain.rs  logic.rs
src/mqtt/: client.rs  domain.rs  local.rs  logic.rs  mod.rs  remote.rs
src/network/: domain.rs  logic.rs
src/quorum/: domain.rs
src/sqlite/: bd.rs  mod.rs
src/system/: check.rs  check_config.rs  check_system_config.rs  configurate.rs  configurate_system.rs  domain.rs  fix_system_config.rs  fsm.rs  mod.rs  network.rs
