[package]
name = "iot_broker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
rumqttc = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
which = "6.0"
thiserror = "1.0"
libc = "0.2.178"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
