[package]
name = "iot_broker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }

# MQTT
rumqttc = "0.25.1"

# Serialización
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
toml = "0.8" # Bajamos versión para quitar el warning de metadata

# Utilidades
which = "6.0"
thiserror = "1.0"
libc = "0.2"
log = "0.4"
chrono = "0.4"
rand = "0.8"
sysinfo = "0.33" # Ajustado a versión compatible común

# Base de Datos
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC (Protobuf)
tonic = { version = "0.12", features = ["tls", "tls-roots", "transport", "gzip"] }
prost = "0.13"
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = "0.12"
